fix mobile ui bug text overflow

--- a/angular-app/src/app/shared/chart-item/chart-item.component.css
+++ b/angular-app/src/app/shared/chart-item/chart-item.component.css
@@ -12,3 +12,8 @@ img, video {
 .video-title .inline{
 display: inline;
 }
+.btn {
+    padding-left: 0px;
+    white-space: normal;
+    text-align: left;
+}
